feat(frontend): Correct modal body background for preview images

--- a/frontend/src/blocks/modal/__body/modal__body.css
+++ b/frontend/src/blocks/modal/__body/modal__body.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0 auto;
   min-width: 430px;
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 10px;
 }
 
